--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -25,16 +25,29 @@
 .eventos__lista{
     display: flex;
     flex-wrap: wrap;
-    row-gap: 1em;
+    gap: 1em;
     justify-content: center;
+}
+
+.eventos__botao, .agenda__botao{
+    align-self: end;
 }
 
 .agenda__lista{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    row-gap: 1em;
+    gap: 1em;
     justify-content: center;
+}
+
+.rodape{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rodape__logo{
+    align-self: end;
 }
 
 @media(min-width: 720px) {
@@ -44,15 +57,14 @@
 
     .categorias__lista{
         flex-wrap: wrap;
-        column-gap: 1em;
-        row-gap: 1em;
+        gap: 1em;
     }
 
     .eventos__lista{
         display: flex;
         flex-wrap: wrap;
         gap: 1em;
-        justify-content: end;
+        justify-content: center;
     }
 
     .eventos__item{
@@ -61,6 +73,29 @@
         flex-wrap: wrap;
         flex-direction: column;
         max-width: 400px;
+    }
+
+    .eventos__botao{
+        margin: 0 0 0 auto;
+    }
+
+    .agenda__lista{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1em;
+        justify-content: center;
+    }
+
+    .agenda__item{
+        display: flex;
+        flex-grow: 1;
+        flex-wrap: wrap;
+        flex-direction: column;
+        max-width: 400px;
+    }
+
+    .agenda__botao{
+        margin: 0 0 0 auto;
     }
 }
 
@@ -88,5 +123,15 @@
 
     .menu__item:nth-child(5){
         order: 2;
+    }
+
+    .agenda__lista{
+        justify-content: center;
+    }
+
+    .agenda__botao {
+        margin-right: 1em;
+        margin-left: auto;
+        justify-content: end;
     }
 }
