--- a/assets/style/grid.css
+++ b/assets/style/grid.css
@@ -6,6 +6,7 @@
 .banner img:nth-child(1){
     grid-column: 1/3;
 }
+
 .banner img:nth-child(4){
     grid-column: 2/3;
     grid-row: 2/4;
@@ -13,34 +14,39 @@
 
 .eventos__item{
     display: grid;
-    
-    grid-template-columns: auto 90px;
-    align-items: center;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto repeat(2, 1fr) auto;
+    grid-template-areas:
+        "imagem imagem"
+        "nome nome"
+        "data data"
+        "local botao";
 }
 
-.eventos img:nth-child(1){
-    grid-column: 1/3;
-    grid-row: 1/2;
+.eventos__item img{
+    grid-area: imagem;
 }
 
-.eventos h3:nth-child(2){
-    grid-column: 1/2;
-    grid-row: 2/3;
+.eventos__item h3{
+    grid-area: nome;
+    align-self: center;
 }
 
-.eventos h4:nth-child(3){
-    grid-column: 1/2;
-    grid-row: 3/4;
+.eventos__item h4{
+    grid-area: data;
 }
 
-.eventos h5:nth-child(4){
-    grid-column: 1/2;
-    grid-row: 5/6;
+.eventos__item h5{
+    grid-area: local;
+    align-self: end;
 }
 
-.eventos button:nth-child(5){
-    grid-column: 2/3;
-    grid-row: 5/6;
+.eventos__item button{
+    grid-area: botao;
+}
+
+.agenda__lista{
+    gap: 1em;
 }
 
 .agenda__item{
@@ -57,7 +63,7 @@
     grid-row: 2/3;
 }
 
-.rodape{
+/* .rodape{
     display: grid;
     gap: 2em;
 }
@@ -90,12 +96,11 @@
 .rodape :nth-child(6){
     grid-column: 2/3;
     grid-row: 3/5;
-}
+} */
 
 @media(min-width:720px){
     .banner{
         display: grid;
-        
     }
 
     .banner img:nth-child(1){
@@ -122,7 +127,7 @@
 @media(min-width:1440px){
     .categorias{
         display: grid;
-        gap: 1em;
+        column-gap: 1em;
     }
 
     .categorias h2:nth-child(1){
@@ -144,4 +149,5 @@
         grid-column: 2/3;
         grid-row: 2/3;
     }
+
 }
